--- a/src/app/center/dialog-center/dialog-center.component.html
+++ b/src/app/center/dialog-center/dialog-center.component.html
@@ -9,8 +9,8 @@
 
   <mat-dialog-content>
     <div class="row diagCon">
-      <h2 mat-dialog-title style="font-size: 50px;">{{ datos.Name }}</h2>
-      <div class="col-6  dialogDivision1" style="border-left: 2px solid white;">
+      <div class="col-6" mat-dialog-title style="font-size: 30px; margin: auto; ">{{ datos.Name }}</div>
+      <div class="col-6  dialogDivision1" style="border-left: 2px solid white;  ">
 
         <ul  style="list-style: none;">
           <li><strong>Direccion: </strong>{{ datos.Provincia }}, {{ datos.Canton }},{{datos.Distrito}}</li>
