--- a/src/app/user/index/index.component.html
+++ b/src/app/user/index/index.component.html
@@ -27,8 +27,8 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Acciones</th>
         <td mat-cell *matCellDef="let row">
   
-          <button mat-mini-fab color="accent" matTooltip="Detalle Canje" aria-label="Detalle Canje" class="custom-button"
-            (click)=" ">
+          <button mat-mini-fab color="accent" matTooltip="CambiarEstado" aria-label="Cambiar estado" class="custom-button"
+            (click)=" actualizarTabla ">
             <mat-icon class="mat-18">info</mat-icon>
           </button>
         </td>
