--- a/src/app/center/index/index.component.html
+++ b/src/app/center/index/index.component.html
@@ -1,32 +1,32 @@
-<mat-grid-list cols="4" class="" style="min-height: 93.1vh;">
-            
+
+<mat-grid-list cols="4" class="">
   <mat-grid-tile *ngFor="let item of datos">
     <mat-card class="example-card">
       <mat-card-header class="custom-card-header2 center-text">
         <div>
-          <h1 >{{item.Name}}</h1>
+          <h2 mat-raised-button>{{item.Name}}</h2>
         </div>
       </mat-card-header>
       <div class="content-container">
         <mat-card-content class="left-align padding-content">
           <div class="">
-            <h2 class="white-text">
+            <div class="white-text">
               <mat-icon>directions</mat-icon>
               Dirección:
-              <h4 style="color: white;">{{item.Provincia}}, {{item.Canton}}, {{item.Distrito}}</h4>
-            </h2>
-  
-            <h2 class="white-text">
+              <p style="color: white;">{{item.Provincia}}, {{item.Canton}}, {{item.Distrito}}</p>
+            </div>
+
+            <div class="white-text">
               <mat-icon>timelapse</mat-icon>
               Horario de atención:
-              <h4 style="color: white;">{{item.Schecudale}}</h4>
-            </h2>
-  
-            <h2 class="white-text">
+              <p style="color: white;">{{item.Schecudale}}</p>
+            </div>
+
+            <div class="white-text">
               <mat-icon>contact_phone</mat-icon>
               Número:
-              <h4 style="color: white;">{{item.Numero}}</h4>
-            </h2>
+              <p style="color: white;">{{item.Numero}}</p>
+            </div>
           </div>
         </mat-card-content>
       </div>
@@ -37,5 +37,5 @@
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
-  
-  </mat-grid-list>
+
+</mat-grid-list>
