--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -39,6 +39,8 @@
                           </mat-error>
             
                         </mat-form-field>
+
+                        <a style="color: white;" (click)="register()">Registrarse</a>
                         <button mat-raised-button style="width: 200px;" mat-raised-button color="accent" (click)="submitForm()">Iniciar sesion</button>
 
                       </form>
