--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -9,14 +9,14 @@
     <mat-icon class="close-icon" color="primary">close</mat-icon>
   </button>
  <div class="container">
-    <div class="info">
+    <div class="info" id="diag">
     
-  
-        <mat-dialog-content  class="row">
-            
+        
+        <mat-dialog-content   class="row">
+            <h1 style="text-align: center; font-size: 30px; font-weight: bold;">{{TitleForm}}</h1>
             <div class="col-4" style="width: 40%;">
                 <img style="height: 100%; width: 100%;"
-                  src="https://cdn.pixabay.com/photo/2017/07/18/23/23/user-2517433_1280.png">
+                src="../assets/img/Logo1.jpg">
               </div>
           
               <div class="col-8" style="width: 60%;">
@@ -30,7 +30,7 @@
           
                       <div class="row rowe ">
                         <h4>Información personal</h4>
-                        <mat-form-field class="col-12">
+                        <mat-form-field class="col-4">
                           <mat-label>Identificación</mat-label>
                           <input matInput formControlName="Identification" maxlength="60" placeholder="Identificación">
                           <mat-error *ngIf="errorHandling('Identification','required')">
@@ -38,7 +38,7 @@
                           </mat-error>
                         </mat-form-field>
           
-                        <mat-form-field class="col-12">
+                        <mat-form-field class="col-4">
                           <mat-label>Nombre</mat-label>
                           <input matInput formControlName="Name" maxlength="60" placeholder="Nombre">
                           <mat-error *ngIf="errorHandling('Name','required')">
@@ -46,19 +46,22 @@
                           </mat-error>
                         </mat-form-field>
           
-                        <mat-form-field class="col-12" *ngIf="IsCreate">
-                          <mat-label>Contraseña</mat-label>
-                          <input matInput type="password" formControlName="Password" maxlength="60" placeholder="Contraseña">
-                          <mat-error *ngIf="errorHandling('Name','required')">
-                            La contraseña es <strong>requerido</strong>
-                          </mat-error>
+                        <mat-form-field class="col-4" *ngIf="IsCreate">
+                            <mat-label>Contraseña</mat-label>
+                            <input matInput [type]="hide ? 'Password' : 'text'" placeholder="Password usuario" formControlName="Password" />
+                            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                            </button>
+                            <mat-error *ngIf="errorHandling('password', 'required')">
+                              Contraseña es <strong>requerida</strong>
+                            </mat-error>
                         </mat-form-field>
           
                       </div>
           
                       <div class="row rowe">
                         <h4>Información de contacto</h4>
-                        <mat-form-field class="col-12">
+                        <mat-form-field class="col-6">
                           <mat-label>Email</mat-label>
                           <input matInput formControlName="Email" maxlength="60" placeholder="Correo electronico">
                           <mat-error *ngIf="errorHandling('Email','required')">
@@ -67,7 +70,7 @@
                         </mat-form-field>
           
           
-                        <mat-form-field class="col-12">
+                        <mat-form-field class="col-6">
                           <mat-label>Número</mat-label>
                           <input matInput formControlName="Number" maxlength="60" placeholder="Numero de telefono">
                           <mat-error *ngIf="errorHandling('Number','required')">
@@ -83,19 +86,13 @@
                           </mat-error>
                         </mat-form-field>
           
-                        <div class="col-12">
-                          <mat-label></mat-label>
-                          <mat-checkbox matInput formControlName="Enabled" class="example-margin">Estado del usuario</mat-checkbox>
-                        </div>
+                        
           
           
-                        <div class="col-6" style="margin: 15px;">
+                        <div class="col-12" style="margin: 15px;">
                           <button style="width:30%;" mat-raised-button color="accent" (click)="submitForm()">Guardar</button>
                         </div>
-                        <div class="col-6" style="margin: 15px;">
-                          <button class="btne" style="width: 30%;" mat-raised-button color="warn"
-                           >Descartar</button>
-                        </div>
+                  
           
                       </div>
                     </mat-card-content>
