--- a/src/app/core/template/template.component.html
+++ b/src/app/core/template/template.component.html
@@ -3,28 +3,82 @@
   <mat-drawer-container autosize style="min-height: 93.1vh; width: 100%;">
 
     <mat-drawer #drawer opened="true" mode="side" position="start">
+
+
+
       <mat-nav-list>
-        <mat-list-item>
-          <button mat-button>
-            <mat-icon>dashboard</mat-icon> Dashboard
-          </button>
-        </mat-list-item>
-        <mat-list-item>
-          <button mat-button routerLink="/Dash/orden">
-            <mat-icon>assignment_turned_in</mat-icon>Ordenes
-          </button>
-        </mat-list-item>
-        <mat-list-item>
-          <button mat-button routerLink="/Dash/cupon">
-            <mat-icon>receipt</mat-icon>Cupones
-          </button>
-        </mat-list-item>
-        <mat-list-item>
-          <button mat-button routerLink="/Dash/user/dashboard">
-            <mat-icon>account_circle</mat-icon>Usuarios
-          </button>
-        </mat-list-item>
+        <!-- Admin -->
+        <ng-container *ngIf="currentUser.roleId === 1">
+          <mat-list-item>
+            <button mat-button routerLink="/Dash/cupon">
+              <mat-icon>receipt</mat-icon>Cupones
+            </button>
+          </mat-list-item>
+
+          <mat-list-item>
+            <button mat-button routerLink="/Dash/user/dashboard">
+              <mat-icon>account_circle</mat-icon>Usuarios
+            </button>
+          </mat-list-item>
+
+          <mat-list-item>
+            <button mat-button routerLink="/Dash/material">
+              <mat-icon>shopping_cart</mat-icon>Materiales
+            </button>
+          </mat-list-item>
+
+          <mat-list-item>
+            <button mat-button routerLink="/Dash/center">
+           <mat-icon> business</mat-icon>Centros
+            </button>
+          </mat-list-item>
+
+          <mat-list-item>
+            <button mat-button routerLink="/Dash/orden">
+              <mat-icon>assignment_turned_in</mat-icon>Ordenes
+            </button>
+          </mat-list-item>
+
+        </ng-container>
+        <!-- Cliente -->
+        <ng-container *ngIf="currentUser.roleId === 2">
+          <mat-list-item>
+            <button mat-button routerLink="/Dash/cupon">
+              <mat-icon>receipt</mat-icon>Cupones
+            </button>
+          </mat-list-item>
+
+          <mat-list-item>
+            <button mat-button routerLink="/Dash/cupon">
+              <mat-icon>assignment_turned_in</mat-icon>Mis ordenes
+            </button>
+          </mat-list-item>
+
+        </ng-container>
+        <!-- AdminCenter -->
+        <ng-container *ngIf="currentUser.roleId === 3">
+          
+          <mat-list-item>
+            <button mat-button>
+              <mat-icon>dashboard</mat-icon> Dashboard
+            </button>
+          </mat-list-item>
+
+          <mat-list-item>
+            <button mat-button routerLink="/Dash/orden">
+              <mat-icon>assignment_turned_in</mat-icon>Ordenes del centro
+            </button>
+          </mat-list-item>
+
+        </ng-container>
+
+
+
       </mat-nav-list>
+
+
+
+
     </mat-drawer>
     <mat-drawer-content>
       <div style="text-align: center;min-height: 600px;">
