--- a/src/app/material/index/index.component.html
+++ b/src/app/material/index/index.component.html
@@ -25,7 +25,12 @@
       </mat-card-content>
       <mat-card-actions  >
         <button class="custom-button" mat-button (click)="detailMaterial(item.Id)"><mat-icon class="icon" >informacion</mat-icon></button>
-        <button class="custom-button" mat-button>Canjear</button>
+       <ng-container *ngIf="currentUser.roleId === 1 ">
+        <button class="custom-button" mat-button routerLink='/Dash/material/update/{{item.Id}}' ><mat-icon>edit</mat-icon>Editar</button>
+       </ng-container>
+       <ng-container *ngIf="currentUser.roleId === 3">
+        <button class="custom-button" mat-button >Canjear</button>
+       </ng-container>
       </mat-card-actions>
     </mat-card>
   </div>
