--- a/src/app/user/info/info.component.html
+++ b/src/app/user/info/info.component.html
@@ -14,7 +14,7 @@
             <p><strong>Dirección:</strong> {{ datos.Direccion}}</p>
             <p><strong>Número:</strong> {{ datos.Number}}</p>
           
-            <button class="custom-button" mat-button style="color: #4AD9A4;" >
+            <button class="custom-button" mat-button style="color: #4AD9A4;"  (click)="password()">
                 <mat-icon class="icon" style="color: #4AD9A4;">restore_page</mat-icon>
                 Cambiar contraseña
               </button>
