--- a/src/app/orden/index-orden/index-orden.component.html
+++ b/src/app/orden/index-orden/index-orden.component.html
@@ -45,7 +45,11 @@
     <!-- Precio Column -->
     <ng-container matColumnDef="total">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Total canjeado</th>
-      <td mat-cell *matCellDef="let row">{{ row.Total }}</td>
+      <td mat-cell *matCellDef="let row" class="cols" style="display: flex; align-items: center; padding: 20px; text-align: center;">
+        {{ row.Total }}<img src="../../../assets/img/_0aaed9ae-ac9c-4071-ba11-dc972e857a11.jpg"
+          alt="Portada" class="cover-image__image2" style="margin-left: 10px;" />
+      </td>
+      
     </ng-container>
     <!-- Acciones Column -->
     <ng-container matColumnDef="acciones">
