--- a/src/app/home/inicio/inicio.component.html
+++ b/src/app/home/inicio/inicio.component.html
@@ -78,8 +78,8 @@
 
           </div>
           <mat-card-actions style="padding-top: 100px;" class="absolute-bottom-right">
-            <button class="custom-button" mat-button (click)="detailMaterial(item.Id)">
-              <mat-icon style="color: #4AD9A4;">information</mat-icon>
+            <button style="color: #4AD9A4;" class="custom-button" mat-button (click)="detailMaterial(item.Id)">
+              <mat-icon style="color: #4AD9A4;">information</mat-icon> Detalle
             </button>
           </mat-card-actions>
         </mat-card>
@@ -89,7 +89,7 @@
   </div>
 
   
-  <div  class="container container-fluid">
+  <div  class="container container-fluid" style="padding-bottom: 50px;">
     <div class="text text-large text-center" style="margin-left: 40px; margin-right: 40px; padding-top: 10px;">
       <h3> <mat-icon>center_focus_strong</mat-icon>  Centros de acopio</h3>
     </div>
@@ -134,8 +134,8 @@
             </mat-card-content>
           </div>
           <mat-card-actions class=" flex-end padding-actions">
-            <button class="custom-button" mat-button (click)="detailCenter(item.Id)">
-              <mat-icon class="icon" style="color: #4AD9A4;">informacion</mat-icon>
+            <button style="color: #4AD9A4;" class="custom-button" mat-button (click)="detailCenter(item.Id)">
+              <mat-icon class="icon" style="color: #4AD9A4;">informacion</mat-icon> Detalle
             </button>
           </mat-card-actions>
         </mat-card>
